# mxdetection

./: .gitignore  main.py  requirements.txt
assets/: 0.2378-imagenet-mobilenetv3_large-0-best.params
configs/: albu_bifpn.yaml  albu_originfpn.yaml  bifpn.yaml  demo.yaml  demo_albu.yaml  demo_albu_no_reimagenet.yaml  originfpn-darknet53.yaml  originfpn.yaml
mxcv/: model_zoo.py
mxcv/cnn/: __init__.py  activation.py  builder.py  conv.py  norm.py
mxcv/cpp_extensions/: .gitignore  CMakeLists.txt  corner_pooling.cpp  iou_loss.cpp
mxcv/estimator/: __init__.py  batch_processor.py  estimator.py  event_handler.py  lr_schedulers.py  utils.py
mxcv/utils/: gradcam.py  log.py  parser.py  registry.py  viz.py
mxcv/utils/bbox/: operators.py
mxdetection/datasets/: __init__.py  builder.py  voc.py
mxdetection/datasets/dataset/: __init__.py  voc.py
mxdetection/datasets/generators/: __init__.py  base_generator.py  yolo_generator.py
mxdetection/datasets/transformers/: __init__.py  abc.py  albumentations.py  base_transformer.py  general.py  target.py
mxdetection/estimator/: __init__.py  batchprocess.py  builder.py  handlers.py  lr_schedulers.py  metrics.py  optimizers.py
mxdetection/models/: __init__.py  builder.py
mxdetection/models/abc/: __init__.py  detector.py
mxdetection/models/assigner/: __init__.py  base_assigner.py  yolo_assigner.py
mxdetection/models/detectors/: __init__.py  yolo.py
mxdetection/models/heads/: __init__.py  yolo_head.py
test/: test_loss.py
tools/: convert_imagenet_rec.py  create_coco_recordio.py  eval.py  train.py  train_imagenet.py
(+16 files in other folders)
